<resources>
    <string name="app_name">Movienfo</string>
    <string name="now_playing_movies">Now playing</string>
    <string name="trending_movies">Trending</string>
    <string name="popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="title_network_alert">Network Error</string>
    <string name="message_network_alert">Make sure you are connected to Internet</string>
    <string name="movie_user_rating">TMDB: %1$s/10</string>
    <string name="find_theaters">You can watch movies in almost every theater across the globe. If you want to find out location of the nearest one to you, please click the button on the right.</string>
    <string name="watchlist">Watchlist</string>
    <string name="favourites">Favourites</string>
    <string name="userList">User pick</string>
    <string name="google_places_api_key" translatable="false">AIzaSyADGEldZct1-7AwWAtE6ckVxVtm04bHMnw</string>
    <string name="upcoming_movies">Soon in theaters</string>
    <string name="search_hint">Search movie</string>
    <string name="toolbar_title">Toolbar</string>
    <string name="find_theaters_content_desc">Find nearest theaters</string>
    <string name="recent">Recent</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="home_icon_desc_land">Home icon desc land</string>
    <string name="home_icon_desc">home icon</string>
    <string name="movie_thum_desc">Movie thumb</string>
    <string name="remove_button_desc">Remove</string>
    <string name="star_desc">Star</string>
    <string name="backrop_desc">Image backdrop</string>
</resources>
