<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/action_search"
    android:icon="@drawable/icon_search2"
    android:title="Search"
    app:actionViewClass="android.widget.SearchView"
    app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/user_pick"
        android:icon="@drawable/icon_menu_home"
        android:title="@string/userList"
        app:showAsAction="ifRoom">
        <menu>
                <item
                    android:checkable="true"
                    android:checked="false"
                    android:id="@+id/watchlist"
                    android:title="@string/watchlist" />
                <item
                    android:checkable="true"
                    android:checked="false"
                    android:id="@+id/favourites"
                    android:title="@string/favourites" />
        </menu>
    </item>
</menu>