<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:layout_height="@dimen/action_bar_height">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="@dimen/home_icon_size"
            android:layout_height="@dimen/home_icon_size"
            android:scaleType="fitXY"
            android:src="@drawable/icon_launcher_movienfo"
            android:contentDescription="@string/home_icon_desc"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/search_bar_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:autofillHints="@string/search_hint"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/colorSecond"
            android:textColorHint="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:inputType="textCapWords" />

        <ImageButton
            android:id="@+id/search_bar_hint_icon"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon_search"
            android:contentDescription="@string/search_icon_desc"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        </androidx.appcompat.widget.Toolbar>

</LinearLayout>